Documentation Dark Mode Font/Background (Issue #695) (#1073)
* Improved code color contrast in dark mode

--- a/docs/stylesheets/colors.css
+++ b/docs/stylesheets/colors.css
@@ -29,12 +29,12 @@
     --md-default-fg-color--lightest: rgba(255, 255, 255, 0.07);
     --md-typeset-a-color: var(--md-accent-fg-color) !important;
     --md-default-bg-color: #1a2124;
-    --md-code-bg-color: #101010 !important;
+    --md-code-bg-color: #282828 !important; 
     --md-code-hl-comment-color: var(--md-code-fg-color) !important;
     --md-code-hl-generic-color: var(--md-code-fg-color) !important;
     --md-code-hl-variable-color: var(--md-code-fg-color) !important;
     --md-code-hl-operator-color: var(--md-code-fg-color) !important;
-    --md-code-fg-color: #cfcfcf !important;
+    --md-code-fg-color: #e0e0e0 !important;
     --md-code-hl-punctuation-color: #adadad !important;
     --home-border-color: #ffffff20;
     --home-shadow-color: #00000040;
@@ -42,6 +42,10 @@
     --md-admonition-bg-color: #272a2b;
     --md-code-hl-color: rgba(255, 255, 0, 0.18);
     --md-default-tag-bg-color: var(--md-default-fg-color);
+    
+    .highlight .c, .highlight .c1, .highlight .ch, .highlight .cm, .highlight .cs, .highlight .sd {
+    color: #a0a0a0!important;
+    }
 
 }
 
